--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.3'
 services:
-  sample:
+  web:
     container_name: my-app
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 3000:3000
+      - 80:80
     environment:
       - CHOKIDAR_USEPOLLING=true
+    restart: always
