--- a/default.conf
+++ b/default.conf
@@ -1,11 +1,14 @@
 server {
-    listen 80;
-    #server_name server_name.com
+    listen 80 default_server;
+    root /var/www/html;
 
-    root /usr/share/nginx/html;
     index index.html index.htm;
 
+    server_name 3.110.43.74;
+
     location / {
-      try_files $uri $uri/ /index.html;
+            # First attempt to serve request as file, then
+            # as directory, then fall back to displaying a 404.
+            try_files $uri $uri/ =404;
     }
-  }
+}
